# Triangles_iLab

./: CMakeLists.txt
include/: intersection.hpp  triangle.hpp
source/: .intersect.cpp.swp  intersect.cpp  line.cpp  plane.cpp  point.cpp  triangle.cpp  vector.cpp
tests/: line-test.cpp  point-test.cpp  vector-test.cpp
